[package]
name = "lunar_lander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# quad-snd = {version = "0.2.7", optional = true}
macroquad = {version = "0.4.5", audio = true}
rusty_audio = {path = "../rusty_audio"}

[features]
audio = []
