[package]
name = "lunar_lander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = {path = "../macroquad", default-features = false}
macroquad-text = {path = "../macroquad-text", default-features = false}
rusty_audio = {path = "../rusty_audio"}

[features]
audio = []
