[package]
name = "lunar_lander"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
macroquad = {path = "../macroquad"}
macroquad-text = {path = "../macroquad-text"}
rusty_audio = {path = "../rusty_audio"}

[features]
audio = []
